Fixed cramping on smaller screen heights

--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -15,13 +15,9 @@ main{
   height: 100vh;
 }
 
-.app-container{
+.app-background{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-around;
   margin: auto;
-  padding: 1em 1em;
   width: 70%;
   height: 90%;
   min-width: 320px;
@@ -29,6 +25,16 @@ main{
   background: #F5F5F5;
   border-radius: 10px;
  
+}
+
+.app-content-container{
+  display: flex;
+  margin: auto;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  height: 80%;
+  min-height: 600px;
 }
 
 .app-header-container{
@@ -91,15 +97,17 @@ main{
 }
 
 @media (min-width: 650px) {
-
-  .app-container{
-    max-height: 400px;
-   
+  .app-background{
+    max-height: 550px;
   }
-    .dice-container {
+  .app-content-container{
+    height: 90%;
+    min-height: 300px;
+  }
+  .dice-container {
       width: 80%;
       grid-template: repeat(2, 1fr)/repeat(5, 1fr);
       grid-gap: 1em;
-    }
-	}
+  }
+}
   
